--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ footer{
   background-color:#9b6f9b;
   color: white;
   text-align: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 /* ****************************
 Layout.js - nav
