--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,10 @@ footer{
   text-align: center;
   justify-content: space-around;
 }
+.workcards{
+  padding: 25px 0px 0px 25px;
+  color:#434655;
+}
 /* ****************************
 Layout.js - nav
 **************************** */
